--- a/Snooker applicatie/Base.lproj/Main.storyboard
+++ b/Snooker applicatie/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Inloggen"/>
                                 <connections>
-                                    <segue destination="qqy-Jh-wjP" kind="show" id="7O3-7e-t71"/>
+                                    <action selector="btnInlogPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GqX-gq-4mX"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -78,6 +78,8 @@
                     <connections>
                         <outlet property="btnInlog" destination="v1w-cU-lxA" id="qld-qh-biB"/>
                         <outlet property="btnRegister" destination="v5m-D5-r9A" id="ZW8-qD-Eng"/>
+                        <outlet property="txtPassword" destination="cJK-aN-Vrt" id="gjs-c9-1iU"/>
+                        <outlet property="txtUsername" destination="VSe-2h-YeO" id="SAw-Tg-a6d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -181,7 +183,7 @@
         <!--View Controller-->
         <scene sceneID="NpQ-aK-hhv">
             <objects>
-                <viewController id="qqy-Jh-wjP" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="overviewView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qqy-Jh-wjP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tng-VK-UI4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
