--- a/Snooker applicatie/Base.lproj/Main.storyboard
+++ b/Snooker applicatie/Base.lproj/Main.storyboard
@@ -202,48 +202,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Znc-2Z-xoe">
-                                <rect key="frame" x="0.0" y="88" width="116" height="150"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mgP-33-agB">
+                                <rect key="frame" x="0.0" y="88" width="275" height="808"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYa-WE-jPk">
-                                        <rect key="frame" x="0.0" y="0.0" width="116" height="30"/>
-                                        <state key="normal" title="Start match"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ek5-un-A2Z">
-                                        <rect key="frame" x="0.0" y="40" width="116" height="30"/>
-                                        <state key="normal" title="Break toevoegen"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnY-FQ-pA3">
-                                        <rect key="frame" x="0.0" y="80" width="116" height="30"/>
-                                        <state key="normal" title="Breaks bekijken"/>
-                                        <connections>
-                                            <segue destination="JdS-Qv-9vK" kind="show" id="W64-uX-L5F"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFx-iL-bqR">
-                                        <rect key="frame" x="0.0" y="120" width="116" height="30"/>
-                                        <state key="normal" title="Match statistiek"/>
-                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="sRv-tc-60p">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="168"/>
+                                        <color key="backgroundColor" red="0.092238001943914183" green="0.21125727899643132" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="275" id="BgN-iL-vlj"/>
+                                            <constraint firstAttribute="height" constant="168" id="Lbj-vP-WsP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Znc-2Z-xoe">
+                                        <rect key="frame" x="0.0" y="176" width="250" height="150"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYa-WE-jPk">
+                                                <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
+                                                <state key="normal" title="Start match">
+                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ek5-un-A2Z">
+                                                <rect key="frame" x="0.0" y="43" width="250" height="30"/>
+                                                <state key="normal" title="Break toevoegen">
+                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnY-FQ-pA3">
+                                                <rect key="frame" x="0.0" y="86" width="250" height="30"/>
+                                                <state key="normal" title="Breaks bekijken">
+                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="JdS-Qv-9vK" kind="show" id="W64-uX-L5F"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFx-iL-bqR">
+                                                <rect key="frame" x="0.0" y="129" width="250" height="21"/>
+                                                <state key="normal" title="Match statistiek">
+                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.66666668650000005" green="0.016579949970000001" blue="0.025488651760000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="ufj-Qe-lUO"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="wFB-d5-1G8"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="116" id="YF5-Ub-O9n"/>
-                                    <constraint firstAttribute="height" constant="150" id="ufj-Qe-lUO"/>
+                                    <constraint firstItem="Znc-2Z-xoe" firstAttribute="top" secondItem="sRv-tc-60p" secondAttribute="bottom" constant="15" id="0d5-Pt-vFC"/>
                                 </constraints>
-                            </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gpy-E6-GCi">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Overzichtsscherm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXj-1c-I8q">
+                                <rect key="frame" x="67" y="126" width="312" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="gpy-E6-GCi" secondAttribute="bottom" id="8cW-2m-AH9"/>
-                            <constraint firstItem="Znc-2Z-xoe" firstAttribute="top" secondItem="rgc-qE-BQt" secondAttribute="top" id="96z-b6-3Bt"/>
-                            <constraint firstItem="Znc-2Z-xoe" firstAttribute="leading" secondItem="rgc-qE-BQt" secondAttribute="leading" id="NTQ-Th-HKf"/>
-                            <constraint firstAttribute="trailing" secondItem="gpy-E6-GCi" secondAttribute="trailing" id="Yf4-B5-8wW"/>
-                            <constraint firstItem="gpy-E6-GCi" firstAttribute="leading" secondItem="Znc-2Z-xoe" secondAttribute="leading" id="fIm-ER-t5a"/>
-                            <constraint firstItem="gpy-E6-GCi" firstAttribute="top" secondItem="rgc-qE-BQt" secondAttribute="top" id="z1g-32-C2B"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="rgc-qE-BQt"/>
                     </view>
                     <toolbarItems/>
@@ -257,9 +279,13 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="LeadingC" destination="fIm-ER-t5a" id="FKp-mS-7xz"/>
-                        <outlet property="OverviewView" destination="gpy-E6-GCi" id="vHK-Fn-cdG"/>
-                        <outlet property="TrailingC" destination="Yf4-B5-8wW" id="TxG-yl-zzW"/>
+                        <outlet property="OverviewView" destination="Tng-VK-UI4" id="2V0-11-6Gk"/>
+                        <outlet property="btnAddBreak" destination="ek5-un-A2Z" id="xFM-Df-7nN"/>
+                        <outlet property="btnMatchStatistic" destination="dFx-iL-bqR" id="iXM-MH-eqQ"/>
+                        <outlet property="btnShowBreak" destination="fnY-FQ-pA3" id="Yyw-8B-Ngr"/>
+                        <outlet property="btnStartMatch" destination="XYa-WE-jPk" id="JsJ-Cz-2Fv"/>
+                        <outlet property="navBar" destination="Znc-2Z-xoe" id="79j-0e-IMr"/>
+                        <outlet property="navBarView" destination="mgP-33-agB" id="j5C-vi-xet"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZEq-Ut-IXg" userLabel="First Responder" sceneMemberID="firstResponder"/>
